# VunderLost

./: CMakeLists.txt  TODO.txt  build.bat  config.txt  main.cpp  sentiment_check.py  test.cpp
0-utils/: rpg_utils.cpp  rpg_utils.h
1-Characters/: character.cpp  character.h  npc_factory.cpp  stat_utils.cpp  stat_utils.h
3-Story/: act1.cpp  act1.h  act2.h  act4.cpp  act4.h  story.cpp  story.h
4-Saves/: save_system.cpp
5-Combat/: CombatManager.cpp  CombatManager.h
5-Combat/data/: abilities.json  elf.json  skeleton.json  witch.json
archive/0-utils/: rpg_utils.cpp  rpg_utils.h
archive/1-Characters/: stat_utils.cpp
archive/3-Story/: act1.cpp  act2.cpp  act3.cpp  act3.h  story.h
archive/4-Saves/: save_system.h
archive/5-Combat/: CombatManager.cpp
archive/5-Combat/data/: Blood_Knight.json  abilities.json  armed_donkey.json  goblin.json  golem.json  slime.json
archive/core/: Effect.cpp
archive/gameSaves/: Save-2025-05-05-16-34-37.json  Save-2025-05-07-18-20-30.json  Save-2025-05-07-19-00-13.json  Save-2025-05-08-18-54-57.json
assets/: opinion_words.txt
assets/mobs/: GregoryLordOfGoo.json  NPC_GregoryLordOfGoo.json  slime.json
core/: Ability.h  AbilityLoader.cpp  Effect.h  status_util.cpp  status_util.h
gameSaves/: Save-2025-05-03-12-41-03.json  Save-2025-05-04-17-51-03.json  Save-2025-05-04-18-17-31.json  Save-2025-05-04-19-30-18.json  Save-2025-05-05-14-18-32.json  Save-2025-05-05-16-36-24.json  Save-2025-05-07-13-27-07.json  Save-2025-05-09-12-51-17.json  Save-2025-05-09-17-14-42.json
include/: AbilityLoader.h  CombatManager.h  NPC.h  act1.h  apikey_loader.h  character.h  npc_factory.h  rpg_utils.h  save_system.h  stat_utils.h  story.h
sentiment_analysis/: sentiment_check.py
src/Characters/: NPC.cpp  character.cpp  npc_factory.cpp
src/Combat/: Ability.cpp  AbilityLoader.cpp  CombatManager.cpp  Effect.cpp  Status.cpp
src/Utilities/: apikey_loader.cpp  chatgpt_wrapper.cpp  rpg_utils.cpp  save_system.cpp  stat_utils.cpp
src/story/: act1.cpp  story.cpp
to_do/: ChatGPTMemory.json  features to build.txt  features.json
